--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     </main>
 
     <footer class="bg-white border-t border-gray-200">
-      <div class="container mx-auto px-6 py-12">
+      <div class="container mx-auto px-6  md:px-20 py-12">
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
               
               <div class="col-span-1 md:col-span-2 lg:col-span-2">
