Tambahin page signin & signup

--- a/register.html
+++ b/register.html
@@ -317,7 +317,7 @@
                             <div class="text-center md:text-right">
                                 <p class="text-white/80 text-sm">
                                     Already have an account? 
-                                    <a href="https://kongsiniaga.com/user/login" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Sign In</a>
+                                    <a href="https://kongsiniaga.com/user/login" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Login</a>
                                 </p>
                             </div>
                         </div>
