--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - KongsiNiaga</title>
+    <title>Login - KongsiNiaga</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         // Konfigurasi untuk memadankan warna butang dan tema
@@ -83,7 +83,7 @@
                             </div>
                             <h6 class="text-teal-200 text-lg font-medium mb-2 tracking-wide">Welcome Back</h6>
                             <h2 class="text-white text-4xl lg:text-5xl font-bold leading-tight">
-                                Sign In to Your
+                                Login to Your
                                 <span class="text-custom-pink">
                                     Account
                                 </span>
@@ -154,14 +154,14 @@
                             type="submit" 
                             class="w-full py-4 bg-custom-pink text-white font-semibold rounded-xl shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-pink-400 focus:ring-offset-2 focus:ring-offset-transparent relative overflow-hidden group"
                         >
-                            <span class="relative z-10">Sign In</span>
+                            <span class="relative z-10">Login</span>
                             <div class="absolute inset-0 bg-pink-700/50 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                         </button>
 
                         <div class="flex flex-col sm:flex-row justify-between items-center space-y-3 sm:space-y-0 text-sm">
                             <p class="text-white/80">
                                 Don't have an account? 
-                                <a href="#" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Sign Up</a>
+                                <a href="#" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Register</a>
                             </p>
                             <a href="#" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">
                                 Forgot Password?
