--- a/register.html
+++ b/register.html
@@ -317,7 +317,7 @@
                             <div class="text-center md:text-right">
                                 <p class="text-white/80 text-sm">
                                     Already have an account? 
-                                    <a href="https://kongsiniaga.com/user/login" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Login</a>
+                                    <a href="./login.html" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Login</a>
                                 </p>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                     <div class="mt-8 text-center animate-fade-in" style="animation-delay: 0.4s;">
                         <p class="text-white/60 text-sm">
                             © All Rights Reserved By 
-                            <a href="#" class="text-pink-300 hover:text-pink-200 transition-colors">KongsiNiaga</a>
+                            <a href="./index.html" class="text-pink-300 hover:text-pink-200 transition-colors">KongsiNiaga</a>
                         </p>
                     </div>
                 </div>
