--- a/login.html
+++ b/login.html
@@ -161,7 +161,7 @@
                         <div class="flex flex-col sm:flex-row justify-between items-center space-y-3 sm:space-y-0 text-sm">
                             <p class="text-white/80">
                                 Don't have an account? 
-                                <a href="#" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Register</a>
+                                <a href="./register.html" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">Register</a>
                             </p>
                             <a href="#" class="text-pink-300 hover:text-pink-200 font-medium transition-colors">
                                 Forgot Password?
@@ -172,7 +172,7 @@
                     <div class="mt-12 text-center animate-fade-in" style="animation-delay: 0.4s;">
                         <p class="text-white/60 text-sm">
                             © All Rights Reserved By 
-                            <a href="#" class="text-pink-300 hover:text-pink-200 transition-colors">KongsiNiaga</a>
+                            <a href="./index.html" class="text-pink-300 hover:text-pink-200 transition-colors">KongsiNiaga</a>
                         </p>
                     </div>
                 </div>
