Tambahin slide section index

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
         }
     </script>
 </head>
-<body class="min-h-screen overflow-hidden">
+<body class="min-h-screen overflow-x-hidden">
     <div class="fixed inset-0 bg-gradient-to-br from-custom-teal-dark via-custom-teal to-custom-teal-dark animate-gradient"></div>
     
     <div class="fixed inset-0 overflow-hidden pointer-events-none">
