--- a/index.html
+++ b/index.html
@@ -162,64 +162,64 @@
 
 
      <section class="bg-white py-16 md:py-44">
-         <div class="container mx-auto px-6">
+            <div class="container mx-auto px-6">
 
-             <div class="flex flex-col md:flex-row justify-between items-start mb-12 md:mb-16">
-                 <div class="w-full md:w-1/2 mb-6 md:mb-0">
-                     <p class="text-sm font-semibold text-purple-600 uppercase tracking-wider">Key Advantages</p>
-                     <h2 class="text-3xl md:text-4xl font-bold text-custom-teal mt-2">
-                         Features Overview
-                     </h2>
-                 </div>
-                 <div class="w-full md:w-1/2 md:pl-8">
-                     <p class="text-base text-custom-teal leading-relaxed">
-                         Kongsi Niaga: Streamlining B2B transactions with efficiency, trust, and a uniquely touch for unparalleled business growth.
-                     </p>
-                 </div>
-             </div>
+                <div class="flex flex-col md:flex-row justify-between items-start mb-12 md:mb-16">
+                    <div class="w-full md:w-1/2 mb-6 md:mb-0">
+                        <p class="text-sm font-semibold text-purple-600 uppercase tracking-wider">Key Advantages</p>
+                        <h2 class="text-3xl md:text-4xl font-bold text-custom-teal mt-2">
+                            Features Overview
+                        </h2>
+                    </div>
+                    <div class="w-full md:w-1/2 md:pl-8">
+                        <p class="text-base text-custom-teal leading-relaxed">
+                            Kongsi Niaga: Streamlining B2B transactions with efficiency, trust, and a uniquely touch for unparalleled business growth.
+                        </p>
+                    </div>
+                </div>
 
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 ">
+                <div class="flex overflow-x-auto md:grid md:grid-cols-2 lg:grid-cols-3 gap-10 scroll-smooth snap-x snap-mandatory">
 
-                 <div class="text-left">
-                     <div class="mb-4">
-                         <svg class="w-12 h-12 text-custom-teal" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                             <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5h-6" />
-                         </svg>
-                     </div>
-                     <h3 class="text-xl font-bold text-custom-teal mb-2">RFQ Management</h3>
-                     <p class="text-base text-custom-teal">
-                         Efficient RFQ management streamlines procurement, saving time and resources for businesses on Kongsi Niaga.
-                     </p>
-                 </div>
+                    <div class="flex-none w-5/6 md:w-auto snap-center text-left">
+                        <div class="mb-4">
+                            <svg class="w-12 h-12 text-custom-teal" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5h-6" />
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-custom-teal mb-2">RFQ Management</h3>
+                        <p class="text-base text-custom-teal">
+                            Efficient RFQ management streamlines procurement, saving time and resources for businesses on Kongsi Niaga.
+                        </p>
+                    </div>
 
-                 <div class="text-left">
-                     <div class="mb-4">
-                         <svg class="w-12 h-12 text-custom-teal-dark" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                             <path stroke-linecap="round" stroke-linejoin="round" d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.82m5.84-2.56a12.022 12.022 0 0 0-12.022 0m12.022 0v-2.56a4.5 4.5 0 0 0-9 0v2.56m9 0a4.5 4.5 0 0 1-9 0m9 0a4.5 4.5 0 0 1-9 0" />
-                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.012 9.012 0 0 0 9-9c0-5-4.03-9-9-9s-9 4-9 9c0 .341.02.68.06 1.01" />
-                         </svg>
-                     </div>
-                     <h3 class="text-xl font-bold text-custom-teal mb-2">Product Sourcing</h3>
-                     <p class="text-base text-custom-teal">
-                         Filterable product catalogs simplify sourcing, connecting businesses with the right suppliers on Kongsi Niaga.
-                     </p>
-                 </div>
+                    <div class="flex-none w-5/6 md:w-auto snap-center text-left">
+                        <div class="mb-4">
+                            <svg class="w-12 h-12 text-custom-teal-dark" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.82m5.84-2.56a12.022 12.022 0 0 0-12.022 0m12.022 0v-2.56a4.5 4.5 0 0 0-9 0v2.56m9 0a4.5 4.5 0 0 1-9 0m9 0a4.5 4.5 0 0 1-9 0" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.012 9.012 0 0 0 9-9c0-5-4.03-9-9-9s-9 4-9 9c0 .341.02.68.06 1.01" />
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-custom-teal mb-2">Product Sourcing</h3>
+                        <p class="text-base text-custom-teal">
+                            Filterable product catalogs simplify sourcing, connecting businesses with the right suppliers on Kongsi Niaga.
+                        </p>
+                    </div>
 
-                 <div class="text-left">
-                     <div class="mb-4">
-                         <svg class="w-12 h-12 text-custom-teal-dark" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                             <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.286Z" />
-                         </svg>
-                     </div>
-                     <h3 class="text-xl font-bold text-custom-teal mb-2">Data Security</h3>
-                     <p class="text-base text-custom-teal">
-                         Secure, GDPR-compliant platform ensures data privacy and builds trust for businesses on Kongsi Niaga.
-                     </p>
-                 </div>
-
-             </div>
-         </div>
+                    <div class="flex-none w-5/6 md:w-auto snap-center text-left">
+                        <div class="mb-4">
+                            <svg class="w-12 h-12 text-custom-teal-dark" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.286Z" />
+                            </svg>
+                        </div>
+                        <h3 class="text-xl font-bold text-custom-teal mb-2">Data Security</h3>
+                        <p class="text-base text-custom-teal">
+                            Secure, GDPR-compliant platform ensures data privacy and builds trust for businesses on Kongsi Niaga.
+                        </p>
+                    </div>
+                    
+                </div>
+            </div>
      </section>
 
      <section class="bg-custom-teal-dark py-16 md:py-24 text-white overflow-hidden">
